<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/notifications">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        tools:ignore="UselessLeaf">
    </LinearLayout>

    <EditText
        android:id="@+id/query_term1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/search_query_term"
        android:padding="20dp"
        android:autofillHints=""
        tools:ignore="TextFields" />




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:padding="15dp">

            <CheckBox
                android:id="@+id/checkbox_arts1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/arts" />

            <CheckBox
                android:id="@+id/checkbox_business1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/business" />

            <CheckBox
                android:id="@+id/checkbox_entrepreneurs1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/entrepreneurs" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:padding="15dp">

            <CheckBox
                android:id="@+id/checkbox_politics1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/politics" />

            <CheckBox
                android:id="@+id/checkbox_sports1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sport" />

            <CheckBox
                android:id="@+id/checkbox_travel1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/travel" />

        </LinearLayout>
    </LinearLayout>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch_notification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:text="enable_notifications (once per day)"
        android:layout_gravity="center"
        tools:ignore="HardcodedText" />



</LinearLayout>