<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        tools:ignore="UselessLeaf">
    </LinearLayout>

    <EditText
        android:id="@+id/query_term"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/search_query_term"
        android:padding="20dp"
        android:autofillHints=""
        tools:ignore="TextFields" />

    <LinearLayout
        android:id="@+id/dates"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/query_term"
        android:baselineAligned="false">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:hint="@string/begin_date_hint"
            app:boxBackgroundColor="@android:color/transparent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/begin_date"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawableEnd="@drawable/ic_baseline_calendar_today_24"
                android:focusable="false"
                tools:ignore="SpeakableTextPresentCheck" />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:hint="@string/end_date_hint"
            app:boxBackgroundColor="@android:color/transparent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/end_date"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:focusable="false"/>

        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:padding="15dp">

            <CheckBox
                android:id="@+id/checkbox_arts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/arts" />

            <CheckBox
                android:id="@+id/checkbox_business"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/business" />

            <CheckBox
                android:id="@+id/checkbox_entrepreneurs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/entrepreneurs" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:padding="15dp">

            <CheckBox
                android:id="@+id/checkbox_politics"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/politics" />

            <CheckBox
                android:id="@+id/checkbox_sports"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sport" />

            <CheckBox
                android:id="@+id/checkbox_travel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/travel" />

        </LinearLayout>
    </LinearLayout>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch_notification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:text="@string/enable_notification"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/search_query_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="8dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="8dp"

        android:text="@string/search"
        android:textColor="#ffffff"/>

</LinearLayout>