<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/search_articles">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        tools:ignore="UselessLeaf">
    </LinearLayout>

    <EditText
        android:id="@+id/query_term"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/search_query_term"
        android:padding="20dp"
        tools:ignore="TextFields,TextContrastCheck" />

    <LinearLayout
        android:id="@+id/dates"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/query_term"
        android:baselineAligned="false">



            <TextView
                android:id="@+id/begin_date"
                android:layout_width="200dp"
                android:layout_height="match_parent"
                style="@android:style/Widget.Spinner"
                android:focusable="false"
                tools:ignore="SpeakableTextPresentCheck" />




            <TextView
                android:id="@+id/end_date"
                style="@android:style/Widget.Spinner"
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:focusable="false"
                tools:ignore="SpeakableTextPresentCheck" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:padding="15dp">

            <CheckBox
                android:id="@+id/checkbox_arts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/arts" />

            <CheckBox
                android:id="@+id/checkbox_business"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/business" />

            <CheckBox
                android:id="@+id/checkbox_entrepreneurs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/entrepreneurs" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:padding="15dp">

            <CheckBox
                android:id="@+id/checkbox_politics"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/politics" />

            <CheckBox
                android:id="@+id/checkbox_sports"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sport" />

            <CheckBox
                android:id="@+id/checkbox_travel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/travel" />

        </LinearLayout>
    </LinearLayout>


    <Button
        android:id="@+id/search_query_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="8dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="8dp"

        android:text="@string/search"
        android:textColor="#ffffff"/>

</LinearLayout>